fix test warnings in pipeline